# psp-patient-journey-lakehouse

./: .gitignore  README.md  main.py  pyproject.toml
config/: data_generation_config.yaml
docs/business/: kpi_definitions.md
pipelines/bronze/: ingest_to_bronze.py  inspect_bronze.py
scripts/: generate_data.py  test_enrollment_generator.py
scripts/generators/: cases.py  claims.py  enrollments.py  shipments.py  status_history.py
scripts/utils/: helpers.py
